fix: keploy fails to stop when tests end (#156)
Signed-off-by: gouravkrosx <gouravgreatkr@gmail.com>